@@ -1,0 +1,18 @@
+# Research causes evolution
+
+Replaces vanilla enemy evolution (time/pollution/spawner kills) with a new evolution mechanic: unlocking technologies
+now increases biter evolution!
+
+In my view, this makes for a better pace through the game. It's common in vanilla for players to devote almost all
+their resources to research, and rush through the technology tree and barely experience mid-game technologies before
+they move on. Now, rushing technology isn't necessary to keep up with biters; in fact it is a bad idea if you haven't
+built up your defenses!
+
+**Note**: this mod was adopted by H8UL from version 16.3.0 and completely rewritten in 16.4.0. Credit to admo for the
+original mod.
+
+## Features
+
+- Technology effects on evolution shown in tech tree
+- Startup setting to decide whether evolution effects are weighted to early tech, late tech, or equal for all techs
+- Startup setting to control whether upgrade technologies effect evolution
