@@ -2,9 +2,11 @@ research-causes-evolution-effect="Increase evolution by __1__%"
 
 [mod-setting-name]
 research-causes-evolution-weighting=Evolution effect weighting
+research-causes-evolution-include-upgrades=Include upgrades (recommended)
 
 [mod-setting-description]
 research-causes-evolution-weighting=How to weight evolution effect of technologies. Default is to increase more early, and then taper off, like vanilla evolution. Equal means all technologies have the same effect. Late gives a gentle start to the game, with later technologies effecting evolution more.
+research-causes-evolution-include-upgrades=Can (non-infinite) upgrade technologies contribute to evolution. Recommended for smoother evolution. The old behaviour of the mod was to ignore all upgrades.
 
 [string-mod-setting]
 #<setting-name>-<dropdown-item-name>=<translated item>
